--- a/index.html
+++ b/index.html
@@ -153,7 +153,6 @@
                                     <div class="words-tools">HTML5</div>
                                     <div class="words-tools">CSS3</div>
                                     <div class="words-tools">GIT,GitHub</div>
-                                    <div class="words-tools">JS</div>
                                 </div>      
                             </div>
                             
@@ -177,20 +176,14 @@
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
                                     </div>
-                                    <div class="circles">
-                                        <img class="circles-for-name" src="img/Ellipse 2.png">
-                                        <img class="circles-for-name" src="img/Ellipse.png">
-                                        <img class="circles-for-name" src="img/Ellipse.png">
-                                        <img class="circles-for-name" src="img/Ellipse.png">
-                                    </div>
                                 </div>      
                             </div>
                             
-                            <!-- <div class="tools-second-names">
+                            <div class="tools-second-names">
                                 <div class="names">
-                                    <div class="words-tools">Spring</div>
-                                    <div class="words-tools">Spring mvc</div>
-                                    <div class="words-tools">CSS5</div>
+                                    <div class="words-tools">JS</div>
+                                    <div class="words-tools">Figma</div>
+                                    <div class="words-tools">Flexbox</div>
                                 </div>      
                             </div>
 
@@ -215,7 +208,7 @@
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
                                     </div>
                                 </div>      
-                            </div> -->
+                            </div>
 
 
                         </div>    
