change circles skills

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
-                                        <img class="circles-for-name" src="img/Ellipse 2.png">
+                                        <img class="circles-for-name" src="img/Ellipse.png">
                                     </div>
                                 </div>      
                             </div>
@@ -191,15 +191,15 @@
                                 <div class="circles-tools">
                                     <div class="circles">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
-                                        <img class="circles-for-name" src="img/Ellipse 2.png">
-                                        <img class="circles-for-name" src="img/Ellipse 2.png">
-                                        <img class="circles-for-name" src="img/Ellipse 2.png">
+                                        <img class="circles-for-name" src="img/Ellipse.png">
+                                        <img class="circles-for-name" src="img/Ellipse.png">
+                                        <img class="circles-for-name" src="img/Ellipse.png">
                                     </div>
                                     <div class="circles">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
-                                        <img class="circles-for-name" src="img/Ellipse 2.png">
-                                        <img class="circles-for-name" src="img/Ellipse 2.png">
+                                        <img class="circles-for-name" src="img/Ellipse.png">
+                                        <img class="circles-for-name" src="img/Ellipse.png">
                                     </div>
                                     <div class="circles">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
