--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="about-me">
                 <div class="first-name">Roman</div>
                 <div class="second-name">Vazhesov</div>
-                <div class="work"><span class="work-span">HTML/CSS coder</span></div>
+                <div class="work"><span class="work-span">QA / Front End</span></div>
                 <div class="tell"><span>Телефон:</span> <br> <span>+38 097 504 74 52</span> </div>
                 
                 <div class="email-addres">
@@ -174,7 +174,7 @@
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
-                                        <img class="circles-for-name" src="img/Ellipse.png">
+                                        <img class="circles-for-name" src="img/Ellipse 2.png">
                                     </div>
                                 </div>      
                             </div>
@@ -198,7 +198,7 @@
                                     <div class="circles">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
                                         <img class="circles-for-name" src="img/Ellipse 2.png">
-                                        <img class="circles-for-name" src="img/Ellipse.png">
+                                        <img class="circles-for-name" src="img/Ellipse 2.png">
                                         <img class="circles-for-name" src="img/Ellipse.png">
                                     </div>
                                     <div class="circles">
